--- a/public/test-coverage/Security/Voter/dashboard.html
+++ b/public/test-coverage/Security/Voter/dashboard.html
@@ -2,12 +2,12 @@
 <html lang="en">
  <head>
   <meta charset="UTF-8">
-  <title>Dashboard for /Applications/MAMP/htdocs/ToDo/src/Repository</title>
+  <title>Dashboard for /Applications/MAMP/htdocs/ToDo/src/Security/Voter</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="../_css/bootstrap.min.css" rel="stylesheet" type="text/css">
-  <link href="../_css/nv.d3.min.css" rel="stylesheet" type="text/css">
-  <link href="../_css/style.css" rel="stylesheet" type="text/css">
-  <link href="../_css/custom.css" rel="stylesheet" type="text/css">
+  <link href="../../_css/bootstrap.min.css" rel="stylesheet" type="text/css">
+  <link href="../../_css/nv.d3.min.css" rel="stylesheet" type="text/css">
+  <link href="../../_css/style.css" rel="stylesheet" type="text/css">
+  <link href="../../_css/custom.css" rel="stylesheet" type="text/css">
  </head>
  <body>
   <header>
@@ -16,8 +16,9 @@
      <div class="col-md-12">
       <nav aria-label="breadcrumb">
        <ol class="breadcrumb">
-         <li class="breadcrumb-item"><a href="../index.html">/Applications/MAMP/htdocs/ToDo/src</a></li>
-         <li class="breadcrumb-item"><a href="index.html">Repository</a></li>
+         <li class="breadcrumb-item"><a href="../../index.html">/Applications/MAMP/htdocs/ToDo/src</a></li>
+         <li class="breadcrumb-item"><a href="../index.html">Security</a></li>
+         <li class="breadcrumb-item"><a href="index.html">Voter</a></li>
          <li class="breadcrumb-item active">(Dashboard)</li>
 
        </ol>
@@ -58,6 +59,8 @@
         </tr>
        </thead>
        <tbody>
+       <tr><td><a href="UserVoter.php.html#10">App\Security\Voter\UserVoter</a></td><td class="text-right">75%</td></tr>
+       <tr><td><a href="TaskVoter.php.html#10">App\Security\Voter\TaskVoter</a></td><td class="text-right">89%</td></tr>
 
        </tbody>
       </table>
@@ -74,6 +77,8 @@
         </tr>
        </thead>
        <tbody>
+       <tr><td><a href="TaskVoter.php.html#10">App\Security\Voter\TaskVoter</a></td><td class="text-right">11</td></tr>
+       <tr><td><a href="UserVoter.php.html#10">App\Security\Voter\UserVoter</a></td><td class="text-right">7</td></tr>
 
        </tbody>
       </table>
@@ -111,6 +116,8 @@
         </tr>
        </thead>
        <tbody>
+       <tr><td><a href="UserVoter.php.html#25"><abbr title="App\Security\Voter\UserVoter::voteOnAttribute">voteOnAttribute</abbr></a></td><td class="text-right">62%</td></tr>
+       <tr><td><a href="TaskVoter.php.html#25"><abbr title="App\Security\Voter\TaskVoter::voteOnAttribute">voteOnAttribute</abbr></a></td><td class="text-right">86%</td></tr>
 
        </tbody>
       </table>
@@ -127,6 +134,8 @@
         </tr>
        </thead>
        <tbody>
+       <tr><td><a href="TaskVoter.php.html#25"><abbr title="App\Security\Voter\TaskVoter::voteOnAttribute">voteOnAttribute</abbr></a></td><td class="text-right">8</td></tr>
+       <tr><td><a href="UserVoter.php.html#25"><abbr title="App\Security\Voter\UserVoter::voteOnAttribute">voteOnAttribute</abbr></a></td><td class="text-right">4</td></tr>
 
        </tbody>
       </table>
@@ -140,9 +149,9 @@
     </p>
    </footer>
   </div>
-  <script src="../_js/jquery.min.js" type="text/javascript"></script>
-  <script src="../_js/d3.min.js" type="text/javascript"></script>
-  <script src="../_js/nv.d3.min.js" type="text/javascript"></script>
+  <script src="../../_js/jquery.min.js" type="text/javascript"></script>
+  <script src="../../_js/d3.min.js" type="text/javascript"></script>
+  <script src="../../_js/nv.d3.min.js" type="text/javascript"></script>
   <script type="text/javascript">
 $(document).ready(function() {
   nv.addGraph(function() {
@@ -155,7 +164,7 @@ $(document).ready(function() {
       .yAxis.tickFormat(d3.format('d'));
 
     d3.select('#classCoverageDistribution svg')
-      .datum(getCoverageDistributionData([0,0,0,0,0,0,0,0,0,0,0,2], "Class Coverage"))
+      .datum(getCoverageDistributionData([0,0,0,0,0,0,0,0,1,1,0,0], "Class Coverage"))
       .transition().duration(500).call(chart);
 
     nv.utils.windowResize(chart.update);
@@ -173,7 +182,7 @@ $(document).ready(function() {
       .yAxis.tickFormat(d3.format('d'));
 
     d3.select('#methodCoverageDistribution svg')
-      .datum(getCoverageDistributionData([0,0,0,0,0,0,0,0,0,0,0,2], "Method Coverage"))
+      .datum(getCoverageDistributionData([0,0,0,0,0,0,0,1,0,1,0,4], "Method Coverage"))
       .transition().duration(500).call(chart);
 
     nv.utils.windowResize(chart.update);
@@ -223,7 +232,7 @@ $(document).ready(function() {
     chart.yAxis.axisLabel('Cyclomatic Complexity');
 
     d3.select('#classComplexity svg')
-      .datum(getComplexityData([[100,1,"<a href=\"TaskRepository.php.html#15\">App\\Repository\\TaskRepository<\/a>"],[100,1,"<a href=\"UserRepository.php.html#15\">App\\Repository\\UserRepository<\/a>"]], 'Class Complexity'))
+      .datum(getComplexityData([[89.47368421052632,11,"<a href=\"TaskVoter.php.html#10\">App\\Security\\Voter\\TaskVoter<\/a>"],[75,7,"<a href=\"UserVoter.php.html#10\">App\\Security\\Voter\\UserVoter<\/a>"]], 'Class Complexity'))
       .transition()
       .duration(500)
       .call(chart);
@@ -247,7 +256,7 @@ $(document).ready(function() {
     chart.yAxis.axisLabel('Method Complexity');
 
     d3.select('#methodComplexity svg')
-      .datum(getComplexityData([[100,1,"<a href=\"TaskRepository.php.html#17\">App\\Repository\\TaskRepository::__construct<\/a>"],[100,1,"<a href=\"UserRepository.php.html#17\">App\\Repository\\UserRepository::__construct<\/a>"]], 'Method Complexity'))
+      .datum(getComplexityData([[100,1,"<a href=\"TaskVoter.php.html#14\">App\\Security\\Voter\\TaskVoter::__construct<\/a>"],[100,2,"<a href=\"TaskVoter.php.html#19\">App\\Security\\Voter\\TaskVoter::supports<\/a>"],[86.66666666666667,8,"<a href=\"TaskVoter.php.html#25\">App\\Security\\Voter\\TaskVoter::voteOnAttribute<\/a>"],[100,1,"<a href=\"UserVoter.php.html#14\">App\\Security\\Voter\\UserVoter::__construct<\/a>"],[100,2,"<a href=\"UserVoter.php.html#19\">App\\Security\\Voter\\UserVoter::supports<\/a>"],[62.5,4,"<a href=\"UserVoter.php.html#25\">App\\Security\\Voter\\UserVoter::voteOnAttribute<\/a>"]], 'Method Complexity'))
       .transition()
       .duration(500)
       .call(chart);
