--- a/public/test-coverage/Security/dashboard.html
+++ b/public/test-coverage/Security/dashboard.html
@@ -2,7 +2,7 @@
 <html lang="en">
  <head>
   <meta charset="UTF-8">
-  <title>Dashboard for /Applications/MAMP/htdocs/ToDo/src/Repository</title>
+  <title>Dashboard for /Applications/MAMP/htdocs/ToDo/src/Security</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="../_css/bootstrap.min.css" rel="stylesheet" type="text/css">
   <link href="../_css/nv.d3.min.css" rel="stylesheet" type="text/css">
@@ -17,7 +17,7 @@
       <nav aria-label="breadcrumb">
        <ol class="breadcrumb">
          <li class="breadcrumb-item"><a href="../index.html">/Applications/MAMP/htdocs/ToDo/src</a></li>
-         <li class="breadcrumb-item"><a href="index.html">Repository</a></li>
+         <li class="breadcrumb-item"><a href="index.html">Security</a></li>
          <li class="breadcrumb-item active">(Dashboard)</li>
 
        </ol>
@@ -58,6 +58,9 @@
         </tr>
        </thead>
        <tbody>
+       <tr><td><a href="Voter/UserVoter.php.html#10">App\Security\Voter\UserVoter</a></td><td class="text-right">75%</td></tr>
+       <tr><td><a href="LoginFormAuthenticator.php.html#23">App\Security\LoginFormAuthenticator</a></td><td class="text-right">88%</td></tr>
+       <tr><td><a href="Voter/TaskVoter.php.html#10">App\Security\Voter\TaskVoter</a></td><td class="text-right">89%</td></tr>
 
        </tbody>
       </table>
@@ -74,6 +77,9 @@
         </tr>
        </thead>
        <tbody>
+       <tr><td><a href="LoginFormAuthenticator.php.html#23">App\Security\LoginFormAuthenticator</a></td><td class="text-right">12</td></tr>
+       <tr><td><a href="Voter/TaskVoter.php.html#10">App\Security\Voter\TaskVoter</a></td><td class="text-right">11</td></tr>
+       <tr><td><a href="Voter/UserVoter.php.html#10">App\Security\Voter\UserVoter</a></td><td class="text-right">7</td></tr>
 
        </tbody>
       </table>
@@ -111,6 +117,11 @@
         </tr>
        </thead>
        <tbody>
+       <tr><td><a href="LoginFormAuthenticator.php.html#88"><abbr title="App\Security\LoginFormAuthenticator::getPassword">getPassword</abbr></a></td><td class="text-right">0%</td></tr>
+       <tr><td><a href="Voter/UserVoter.php.html#25"><abbr title="App\Security\Voter\UserVoter::voteOnAttribute">voteOnAttribute</abbr></a></td><td class="text-right">62%</td></tr>
+       <tr><td><a href="LoginFormAuthenticator.php.html#93"><abbr title="App\Security\LoginFormAuthenticator::onAuthenticationSuccess">onAuthenticationSuccess</abbr></a></td><td class="text-right">66%</td></tr>
+       <tr><td><a href="LoginFormAuthenticator.php.html#63"><abbr title="App\Security\LoginFormAuthenticator::getUser">getUser</abbr></a></td><td class="text-right">85%</td></tr>
+       <tr><td><a href="Voter/TaskVoter.php.html#25"><abbr title="App\Security\Voter\TaskVoter::voteOnAttribute">voteOnAttribute</abbr></a></td><td class="text-right">86%</td></tr>
 
        </tbody>
       </table>
@@ -127,6 +138,10 @@
         </tr>
        </thead>
        <tbody>
+       <tr><td><a href="Voter/TaskVoter.php.html#25"><abbr title="App\Security\Voter\TaskVoter::voteOnAttribute">voteOnAttribute</abbr></a></td><td class="text-right">8</td></tr>
+       <tr><td><a href="Voter/UserVoter.php.html#25"><abbr title="App\Security\Voter\UserVoter::voteOnAttribute">voteOnAttribute</abbr></a></td><td class="text-right">4</td></tr>
+       <tr><td><a href="LoginFormAuthenticator.php.html#63"><abbr title="App\Security\LoginFormAuthenticator::getUser">getUser</abbr></a></td><td class="text-right">3</td></tr>
+       <tr><td><a href="LoginFormAuthenticator.php.html#93"><abbr title="App\Security\LoginFormAuthenticator::onAuthenticationSuccess">onAuthenticationSuccess</abbr></a></td><td class="text-right">2</td></tr>
 
        </tbody>
       </table>
@@ -155,7 +170,7 @@ $(document).ready(function() {
       .yAxis.tickFormat(d3.format('d'));
 
     d3.select('#classCoverageDistribution svg')
-      .datum(getCoverageDistributionData([0,0,0,0,0,0,0,0,0,0,0,2], "Class Coverage"))
+      .datum(getCoverageDistributionData([0,0,0,0,0,0,0,0,1,2,0,0], "Class Coverage"))
       .transition().duration(500).call(chart);
 
     nv.utils.windowResize(chart.update);
@@ -173,7 +188,7 @@ $(document).ready(function() {
       .yAxis.tickFormat(d3.format('d'));
 
     d3.select('#methodCoverageDistribution svg')
-      .datum(getCoverageDistributionData([0,0,0,0,0,0,0,0,0,0,0,2], "Method Coverage"))
+      .datum(getCoverageDistributionData([1,0,0,0,0,0,0,2,0,2,0,9], "Method Coverage"))
       .transition().duration(500).call(chart);
 
     nv.utils.windowResize(chart.update);
@@ -223,7 +238,7 @@ $(document).ready(function() {
     chart.yAxis.axisLabel('Cyclomatic Complexity');
 
     d3.select('#classComplexity svg')
-      .datum(getComplexityData([[100,1,"<a href=\"TaskRepository.php.html#15\">App\\Repository\\TaskRepository<\/a>"],[100,1,"<a href=\"UserRepository.php.html#15\">App\\Repository\\UserRepository<\/a>"]], 'Class Complexity'))
+      .datum(getComplexityData([[88.88888888888889,12,"<a href=\"LoginFormAuthenticator.php.html#23\">App\\Security\\LoginFormAuthenticator<\/a>"],[89.47368421052632,11,"<a href=\"Voter\/TaskVoter.php.html#10\">App\\Security\\Voter\\TaskVoter<\/a>"],[75,7,"<a href=\"Voter\/UserVoter.php.html#10\">App\\Security\\Voter\\UserVoter<\/a>"]], 'Class Complexity'))
       .transition()
       .duration(500)
       .call(chart);
@@ -247,7 +262,7 @@ $(document).ready(function() {
     chart.yAxis.axisLabel('Method Complexity');
 
     d3.select('#methodComplexity svg')
-      .datum(getComplexityData([[100,1,"<a href=\"TaskRepository.php.html#17\">App\\Repository\\TaskRepository::__construct<\/a>"],[100,1,"<a href=\"UserRepository.php.html#17\">App\\Repository\\UserRepository::__construct<\/a>"]], 'Method Complexity'))
+      .datum(getComplexityData([[100,1,"<a href=\"LoginFormAuthenticator.php.html#34\">App\\Security\\LoginFormAuthenticator::__construct<\/a>"],[100,2,"<a href=\"LoginFormAuthenticator.php.html#42\">App\\Security\\LoginFormAuthenticator::supports<\/a>"],[100,1,"<a href=\"LoginFormAuthenticator.php.html#48\">App\\Security\\LoginFormAuthenticator::getCredentials<\/a>"],[85.71428571428571,3,"<a href=\"LoginFormAuthenticator.php.html#63\">App\\Security\\LoginFormAuthenticator::getUser<\/a>"],[100,1,"<a href=\"LoginFormAuthenticator.php.html#80\">App\\Security\\LoginFormAuthenticator::checkCredentials<\/a>"],[0,1,"<a href=\"LoginFormAuthenticator.php.html#88\">App\\Security\\LoginFormAuthenticator::getPassword<\/a>"],[66.66666666666666,2,"<a href=\"LoginFormAuthenticator.php.html#93\">App\\Security\\LoginFormAuthenticator::onAuthenticationSuccess<\/a>"],[100,1,"<a href=\"LoginFormAuthenticator.php.html#102\">App\\Security\\LoginFormAuthenticator::getLoginUrl<\/a>"],[100,1,"<a href=\"Voter\/TaskVoter.php.html#14\">App\\Security\\Voter\\TaskVoter::__construct<\/a>"],[100,2,"<a href=\"Voter\/TaskVoter.php.html#19\">App\\Security\\Voter\\TaskVoter::supports<\/a>"],[86.66666666666667,8,"<a href=\"Voter\/TaskVoter.php.html#25\">App\\Security\\Voter\\TaskVoter::voteOnAttribute<\/a>"],[100,1,"<a href=\"Voter\/UserVoter.php.html#14\">App\\Security\\Voter\\UserVoter::__construct<\/a>"],[100,2,"<a href=\"Voter\/UserVoter.php.html#19\">App\\Security\\Voter\\UserVoter::supports<\/a>"],[62.5,4,"<a href=\"Voter\/UserVoter.php.html#25\">App\\Security\\Voter\\UserVoter::voteOnAttribute<\/a>"]], 'Method Complexity'))
       .transition()
       .duration(500)
       .call(chart);
