--- a/public/test-coverage/Security/index.html
+++ b/public/test-coverage/Security/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
  <head>
   <meta charset="UTF-8">
-  <title>Code Coverage for /Applications/MAMP/htdocs/ToDo/src/DataFixtures</title>
+  <title>Code Coverage for /Applications/MAMP/htdocs/ToDo/src/Security</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="../_css/bootstrap.min.css" rel="stylesheet" type="text/css">
   <link href="../_css/octicons.css" rel="stylesheet" type="text/css">
@@ -17,7 +17,7 @@
       <nav aria-label="breadcrumb">
        <ol class="breadcrumb">
          <li class="breadcrumb-item"><a href="../index.html">/Applications/MAMP/htdocs/ToDo/src</a></li>
-         <li class="breadcrumb-item active">DataFixtures</li>
+         <li class="breadcrumb-item active">Security</li>
          <li class="breadcrumb-item">(<a href="dashboard.html">Dashboard</a>)</li>
 
        </ol>
@@ -43,7 +43,23 @@
      </thead>
      <tbody>
       <tr>
-       <td class="danger">Total</td>
+       <td class="warning">Total</td>
+       <td class="warning big">       <div class="progress">
+         <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="86.21" aria-valuemin="0" aria-valuemax="100" style="width: 86.21%">
+           <span class="sr-only">86.21% covered (warning)</span>
+         </div>
+       </div>
+</td>
+       <td class="warning small"><div align="right">86.21%</div></td>
+       <td class="warning small"><div align="right">50&nbsp;/&nbsp;58</div></td>
+       <td class="warning big">       <div class="progress">
+         <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="64.29" aria-valuemin="0" aria-valuemax="100" style="width: 64.29%">
+           <span class="sr-only">64.29% covered (warning)</span>
+         </div>
+       </div>
+</td>
+       <td class="warning small"><div align="right">64.29%</div></td>
+       <td class="warning small"><div align="right">9&nbsp;/&nbsp;14</div></td>
        <td class="danger big">       <div class="progress">
          <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="0.00" aria-valuemin="0" aria-valuemax="100" style="width: 0.00%">
            <span class="sr-only">0.00% covered (danger)</span>
@@ -51,35 +67,27 @@
        </div>
 </td>
        <td class="danger small"><div align="right">0.00%</div></td>
-       <td class="danger small"><div align="right">0&nbsp;/&nbsp;47</div></td>
-       <td class="danger big">       <div class="progress">
-         <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="0.00" aria-valuemin="0" aria-valuemax="100" style="width: 0.00%">
-           <span class="sr-only">0.00% covered (danger)</span>
-         </div>
-       </div>
-</td>
-       <td class="danger small"><div align="right">0.00%</div></td>
-       <td class="danger small"><div align="right">0&nbsp;/&nbsp;2</div></td>
-       <td class="danger big">       <div class="progress">
-         <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="0.00" aria-valuemin="0" aria-valuemax="100" style="width: 0.00%">
-           <span class="sr-only">0.00% covered (danger)</span>
-         </div>
-       </div>
-</td>
-       <td class="danger small"><div align="right">0.00%</div></td>
-       <td class="danger small"><div align="right">0&nbsp;/&nbsp;1</div></td>
+       <td class="danger small"><div align="right">0&nbsp;/&nbsp;3</div></td>
       </tr>
 
       <tr>
-       <td class="danger"><img src="../_icons/file-code.svg" class="octicon" /><a href="AppFixtures.php.html">AppFixtures.php</a></td>
-       <td class="danger big">       <div class="progress">
-         <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="0.00" aria-valuemin="0" aria-valuemax="100" style="width: 0.00%">
-           <span class="sr-only">0.00% covered (danger)</span>
+       <td class="warning"><img src="../_icons/file-directory.svg" class="octicon" /><a href="Voter/index.html">Voter</a></td>
+       <td class="warning big">       <div class="progress">
+         <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="83.87" aria-valuemin="0" aria-valuemax="100" style="width: 83.87%">
+           <span class="sr-only">83.87% covered (warning)</span>
          </div>
        </div>
 </td>
-       <td class="danger small"><div align="right">0.00%</div></td>
-       <td class="danger small"><div align="right">0&nbsp;/&nbsp;47</div></td>
+       <td class="warning small"><div align="right">83.87%</div></td>
+       <td class="warning small"><div align="right">26&nbsp;/&nbsp;31</div></td>
+       <td class="warning big">       <div class="progress">
+         <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="66.67" aria-valuemin="0" aria-valuemax="100" style="width: 66.67%">
+           <span class="sr-only">66.67% covered (warning)</span>
+         </div>
+       </div>
+</td>
+       <td class="warning small"><div align="right">66.67%</div></td>
+       <td class="warning small"><div align="right">4&nbsp;/&nbsp;6</div></td>
        <td class="danger big">       <div class="progress">
          <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="0.00" aria-valuemin="0" aria-valuemax="100" style="width: 0.00%">
            <span class="sr-only">0.00% covered (danger)</span>
@@ -88,6 +96,26 @@
 </td>
        <td class="danger small"><div align="right">0.00%</div></td>
        <td class="danger small"><div align="right">0&nbsp;/&nbsp;2</div></td>
+      </tr>
+
+      <tr>
+       <td class="warning"><img src="../_icons/file-code.svg" class="octicon" /><a href="LoginFormAuthenticator.php.html">LoginFormAuthenticator.php</a></td>
+       <td class="warning big">       <div class="progress">
+         <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="88.89" aria-valuemin="0" aria-valuemax="100" style="width: 88.89%">
+           <span class="sr-only">88.89% covered (warning)</span>
+         </div>
+       </div>
+</td>
+       <td class="warning small"><div align="right">88.89%</div></td>
+       <td class="warning small"><div align="right">24&nbsp;/&nbsp;27</div></td>
+       <td class="warning big">       <div class="progress">
+         <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="62.50" aria-valuemin="0" aria-valuemax="100" style="width: 62.50%">
+           <span class="sr-only">62.50% covered (warning)</span>
+         </div>
+       </div>
+</td>
+       <td class="warning small"><div align="right">62.50%</div></td>
+       <td class="warning small"><div align="right">5&nbsp;/&nbsp;8</div></td>
        <td class="danger big">       <div class="progress">
          <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="0.00" aria-valuemin="0" aria-valuemax="100" style="width: 0.00%">
            <span class="sr-only">0.00% covered (danger)</span>
